@@ -42,6 +42,7 @@ Version 1.1.4 to be released
 - Enh #1461: Enhanced CEmailLogRoute to support additional email headers (Y!!)
 - Enh #1471: CActiveForm AJAX validation should be cancelled when the form is already submitted (Qiang)
 - Enh #1509: Improved CMarkdownParser so that it can be used in console mode (Qiang)
+- Enh #1525: Added support to allow customizing 'name' attribute of checkboxes generated by CCheckBoxColumn (Qiang)
 - Enh: Added CPortlet::hideOnEmpty property (Qiang)
 - Enh: Added CValidator::safe to allow marking a validator as safe or unsafe (Qiang)
 - Enh: Added CDbCacheDependency::params (Qiang)
